2006-09-12  Aaron Stone  <aaron@serendipity.cx>

	* pop3.c, db.c:
	Minor formatting changes, deterministic message sort order.

2006-09-11  Aaron Stone  <aaron@serendipity.cx>

	* debug.c:
	Return right away if there's no logging to be done.

2006-09-10  Aaron Stone  <aaron@serendipity.cx>

	* imapcommands.c:
	Give parentmboxid an initial value to prevent garbage mailbox ACL
	lookups.

2006-09-10  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	deal with missing envelopes
	* dbmail-imapsession.c:
	newtrace cleanups
	* ChangeLog, modules/dbsqlite.c:
	fix tiny leak in sqlite code
	* dbmail-imapsession.c, imapcommands.c:
	reopen the mailbox for each fetch

2006-09-09  Paul J Stevens <paul@nfg.nl>

	* db.c, db.h, dbmail-imapsession.c, dbmail-imapsession.h, dbmail-message.c, 
	  dbmail-message.h, dm_imaputil.c, dm_imaputil.h, imapcommands.c, 
	  maintenance.c, misc.c, misc.h, sql/mysql/2_1_7-2_1_8.mysql, 
	  sql/postgresql/2_1_7-2_1_8.pgsql, sql/sqlite/2_1_7-2_1_8.sqlite:
	precache ENVELOPE to allow more FETCH speedups
	* serverparent.c, sql/mysql/2_1_7-2_1_8.mysql:
	finish envelope caching

2006-09-09  Aaron Stone  <aaron@serendipity.cx>

	* imapcommands.c:
	Allow mailbox renaming destination to be top-level.

2006-09-08  Paul J Stevens <paul@nfg.nl>

	* pop3.c, test-scripts/testpop.txt:
	more pop3 cleanups
	* check_dbmail_imapd.c, dbmail-imapsession.c, dm_imaputil.c:
	speedup fetch by changing a join in _fetch_headers
	* serverparent.c:
	fix double free
	* check_dbmail_imapd.c, db.h, dbmail-imapsession.c, dbmail-imapsession.h, 
	  dm_imaputil.c, imapcommands.c, list.c, list.h, misc.c, misc.h:
	massive speedup in fetch code by retrieving headerfields in one query
	* test-scripts/testfetch.txt:
	added fetch sequence used by evolution
	* dbmail-imapsession.c, imapcommands.c, test-scripts/testfetch.txt:
	fix a memleak and add OE fetch to testscript
	* dbmail-imapsession.c:
	make the fetch speedup scale up

2006-09-08  Aaron Stone  <aaron@serendipity.cx>
